# Winter

./: CMakeLists.txt  README.md  backtest_report.html  dummy_socket.py  makefile  strategy_template.cpp  trade_result_graphs.html  warmcache.cpp  winter_config.yaml  winter_strategies.conf  winter_trades.csv  winter_trades_1_17.csv
applications/backtest_app/: main.cpp
examples/strategy_ma_strategy/: simple_ma_strategy.hpp
include/: zmq.hpp
include/winter/backtest/: backtest_engine.hpp
include/winter/core/: engine.hpp  market_data.hpp  order.hpp  portfolio.hpp  signal.hpp
include/winter/strategy/: enhanced_strategy_base.hpp  strategy_base.hpp  strategy_factory.hpp  strategy_registry.hpp
include/winter/utils/: config.hpp  core_affinity.hpp  flamegraph.hpp  lock_free_queue.hpp  logger.hpp  memory_pool.hpp  performance_analyzer.hpp  plugin_loader.hpp  profiling.hpp
src/simulate/: simulate.cpp
src/winter/backtest/: backtest_engine.cpp
src/winter/core/: engine.cpp  market_data.cpp  order.cpp  portfolio.cpp  signal.cpp
src/winter/strategy/: strategy_factory.cpp  strategy_registry.cpp
src/winter/utils/: config.cpp  core_affinity.cpp  flamegraph.cpp  lock_free_queue.cpp  logger.cpp  memory_pool.cpp  performance_analyzer.cpp  plugin_loader.cpp
strategies/: mean_reversion_strategy.hpp  stat_arbitrage.hpp
tests/integration/: framework_integration_test.cpp
tests/performance/: latency_benchmark.cpp  throughput_benchmark.cpp
tests/unit/: core_tests.cpp  strategy_tests.cpp  utils_test.cpp
